fixing content overflowing it's container, added readme

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -7,6 +7,7 @@ html {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   min-height: 100vh; 
   line-height: 1.6;
+  overflow-x: hidden;
 
   @media screen and (min-width: $xlarge){
     font-size: 120%;
