--- a/scss/components/_post.scss
+++ b/scss/components/_post.scss
@@ -32,7 +32,7 @@
     margin: 0 auto;
   }
 
-  .tumblr_audio_player, iframe {
+  .tumblr_audio_player, .tumblr_video_container, iframe {
     min-width: 100%;
     max-width: 100%;
   }
